--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -12,6 +12,17 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+
+  display: flex;
+  justify-content: space-between;
+
+  padding: 8px;
+}
+
+.left-header,.right-header{
+  display:flex;
+  align-items: center;
+  gap: 20px;
 }
 
 .profile-image {
@@ -41,8 +52,16 @@ a {
   /* this removes the line under our links */
   text-decoration: none;
   color: rebeccapurple;
+
+  margin: 8px;
 }
 
 ul {
+  display: flex;
+  justify-content: space-between;
+  margin: 0px;
+  padding: 0px;
+  align-items: center;
+
   list-style-type: none;
 }
