--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -25,3 +25,51 @@ input {
   width: 400px;
   margin-bottom: 16px;
 }
+
+/*
+My stuff here
+*/
+
+
+body{
+  display:flex;
+  flex-direction:column;
+  justify-content: space-between;
+}
+
+li{
+  list-style: none;
+}
+
+a{
+  text-decoration: none;
+  color: black;
+}
+
+button{
+  padding: 8px 24px;
+}
+
+ul{
+  display: flex;
+  gap:32px;
+  margin: 0px;
+  padding: 0px;
+}
+
+.header,.footer{
+  display:flex;
+  justify-content: space-between;
+  padding:12px;
+}
+
+.footer{
+  background-color: #eeeeee;
+}
+
+.content{
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
